@@ -2,16 +2,18 @@ package com.faraz.dictionary;
 
 import static android.widget.Toast.LENGTH_LONG;
 import static android.widget.Toast.LENGTH_SHORT;
+import static com.faraz.dictionary.MainActivity.PASTEBIN_DEV_KEY;
+import static com.faraz.dictionary.MainActivity.PASTEBIN_USER_KEY;
 import static com.mailjet.client.transactional.response.SentMessageStatus.SUCCESS;
 import static org.apache.commons.text.WordUtils.capitalize;
 import static java.lang.String.format;
 import static java.lang.System.currentTimeMillis;
 import static java.util.Optional.ofNullable;
-import static java.util.concurrent.CompletableFuture.runAsync;
 
+import android.app.AlertDialog;
+import android.content.Context;
 import android.content.Intent;
 import android.os.Bundle;
-import android.util.Base64;
 import android.util.Log;
 import android.view.View;
 import android.widget.Toast;
@@ -37,11 +39,11 @@ import java.io.InputStream;
 import java.util.Arrays;
 import java.util.List;
 import java.util.Locale;
+import java.util.Optional;
 import java.util.Properties;
 import java.util.concurrent.CompletableFuture;
 import java.util.concurrent.TimeUnit;
 import java.util.function.Predicate;
-import java.util.stream.Collectors;
 
 import okhttp3.OkHttpClient;
 
@@ -61,11 +63,13 @@ public class MainActivity2 extends AppCompatActivity {
   private MailjetClient mailjetClient;
   private Properties properties;
   private Repository repository;
+  private Context context;
 
   @Override
   protected void onCreate(Bundle savedInstanceState) {
     super.onCreate(savedInstanceState);
     setContentView(R.layout.activity_main2);
+    context = this;
     mailjetClient();
     repository = new Repository();
   }
@@ -79,7 +83,7 @@ public class MainActivity2 extends AppCompatActivity {
     runOnUiThread(() -> Toast.makeText(MainActivity2.this, "Backing up data!", LENGTH_LONG).show());
     List<View> buttons = findViewById(R.id.mainactivity2).getTouchables();
     toggleButtons(buttons, false);
-    runAsync(this::backupData).thenAccept(ignore -> toggleButtons(buttons, true));
+    Completable.runAsync(this::backupData).thenRunAsync(() -> toggleButtons(buttons, true));
   }
 
   private void toggleButtons(List<View> buttons, boolean enable) {
@@ -88,8 +92,9 @@ public class MainActivity2 extends AppCompatActivity {
 
   public void switchEmailProvider(View view) {
     defaultEmailProvider = !defaultEmailProvider;
-    runOnUiThread(() -> Toast.makeText(MainActivity2.this, format("Email Provider has been switched to %s",
-            (defaultEmailProvider ? "JavaMail" : "MailJet")), LENGTH_SHORT).show());
+    runOnUiThread(() -> Toast.makeText(MainActivity2.this,
+            format("Email Provider has been switched to %s", (defaultEmailProvider ? "JavaMail" : "MailJet")),
+            LENGTH_SHORT).show());
   }
 
   public void randomWordsActivity(View view) {
@@ -98,21 +103,27 @@ public class MainActivity2 extends AppCompatActivity {
   }
 
   public void syncAutocompleteActivity(View view) {
-    List<View> buttons = findViewById(R.id.mainactivity2).getTouchables();
-    toggleButtons(buttons, false);
-    runAsync(repository::reset).thenRun(() -> runOnUiThread(() -> Toast.makeText(MainActivity2.this,
-                    "Autocomplete and Database are in sync now.", LENGTH_SHORT).show()))
-            .thenRun(() -> toggleButtons(buttons, true)).thenRun(() -> {
-              Intent intent = new Intent(this, MainActivity.class);
-              startActivity(intent);
-            });
+    new AlertDialog.Builder(context).setTitle("Confirm Action")
+            .setMessage("This action will delete the database before syncing. Are you sure?")
+            .setPositiveButton("Yes", (dialog, which) -> {
+              List<View> buttons = findViewById(R.id.mainactivity2).getTouchables();
+              toggleButtons(buttons, false);
+              Completable.runAsync(repository::reset).thenRunAsync(() -> runOnUiThread(() ->
+                              Toast.makeText(MainActivity2.this, "Autocomplete and Database are in sync now.",
+                                      LENGTH_SHORT).show())).thenRunAsync(() -> toggleButtons(buttons, true))
+                      .thenRunAsync(() -> {
+                        Intent intent = new Intent(context, MainActivity.class);
+                        startActivity(intent);
+                      });
+            }).setNegativeButton("No", (dialog, which) -> runOnUiThread(() -> Toast.makeText(context, "Good choice.",
+                    LENGTH_LONG).show())).show();
   }
 
   public void mailjetClient() {
     if (mailjetClient == null) {
-      ClientOptions options = ClientOptions.builder().apiKey(loadProperty(MAIL_KEY))
-              .apiSecretKey(loadProperty(MAIL_SECRET)).okHttpClient(new OkHttpClient.Builder()
-                      .callTimeout(1, TimeUnit.MINUTES).build()).build();
+      ClientOptions options =
+              ClientOptions.builder().apiKey(loadProperty(MAIL_KEY)).apiSecretKey(loadProperty(MAIL_SECRET))
+                      .okHttpClient(new OkHttpClient.Builder().callTimeout(1, TimeUnit.MINUTES).build()).build();
       mailjetClient = new MailjetClient(options);
     }
   }
@@ -141,19 +152,11 @@ public class MainActivity2 extends AppCompatActivity {
     String from = loadProperty(MAIL_FROM);
     String to = loadProperty(MAIL_TO);
     body = "<div style=\"font-size:20px\">" + body + "</div>";
-    TransactionalEmail message1 = TransactionalEmail
-            .builder()
-            .to(new SendContact(to, "Personal Dictionary"))
-            .from(new SendContact(from, "Personal Dictionary"))
-            .htmlPart(body)
-            .subject(subject)
-            .trackOpens(TrackOpens.DISABLED)
-            .build();
+    TransactionalEmail message1 = TransactionalEmail.builder().to(new SendContact(to, "Personal Dictionary"))
+            .from(new SendContact(from, "Personal Dictionary")).htmlPart(body).subject(subject)
+            .trackOpens(TrackOpens.DISABLED).build();
 
-    SendEmailsRequest request = SendEmailsRequest
-            .builder()
-            .message(message1) // you can add up to 50 messages per request
-            .build();
+    SendEmailsRequest request = SendEmailsRequest.builder().message(message1).build();
     SendEmailsResponse response = null;
     // act
     try {
@@ -179,19 +182,23 @@ public class MainActivity2 extends AppCompatActivity {
 
   private void backupData() {
     try {
-      CompletableFuture<String> fullDataCF = CompletableFuture.supplyAsync(() ->
-              Base64.encodeToString(CompressUtil.compress(repository.getValuesAsAString()), Base64.DEFAULT));
-      CompletableFuture<String> justWordsWithCountAndStylingCF = CompletableFuture.supplyAsync(() ->
-                      ImmutableList.<String>builder().add(String.format(Locale.US, "Total Count: '%d'.",
-                                      repository.getLength()))
-                              .addAll(ImmutableList.<String>builder().addAll(repository.getWords().stream()
-                                      .map(this::anchor).collect(Collectors.toList())).build().reverse()).build())
-              .thenApply(OfflineAndDeletedWordsActivity::addDivStyling);
-      fullDataCF.thenCombine(justWordsWithCountAndStylingCF, List::of).join().forEach(this::sendBackupEmail);
+      CompletableFuture.supplyAsync(() -> repository.getValuesAsStrings())
+              .thenAccept(list -> Optional.of(pastebinServiceObject()).ifPresent(pbs -> Optional.of(list).stream()
+                      .flatMap(List::stream).forEach(pbs::create)));
+      CompletableFuture.supplyAsync(() -> ImmutableList.<String>builder()
+                      .add(String.format(Locale.US, "Total Count: '%d'.", repository.getLength()))
+                      .addAll(ImmutableList.<String>builder().addAll(repository.getWords().stream().map(this::anchor)
+                              .toList()).build().reverse()).build())
+              .thenApply(OfflineAndDeletedWordsActivity::addDivStyling)
+              .thenAccept(this::sendBackupEmail);
     } catch (Exception e) {
       Log.e(TAG, e.getLocalizedMessage(), e);
       runOnUiThread(() -> Toast.makeText(MainActivity2.this, ExceptionUtils.getStackTrace(e), LENGTH_LONG).show());
     }
+  }
+
+  private PastebinService pastebinServiceObject() {
+    return new PastebinService(loadProperty(PASTEBIN_DEV_KEY), loadProperty(PASTEBIN_USER_KEY));
   }
 
   private String anchor(String word) {
@@ -203,11 +210,11 @@ public class MainActivity2 extends AppCompatActivity {
     String subject = "Words Backup.";
     try {
       if (sendEmail(subject, backup_words)) {
-        runOnUiThread(() -> Toast.makeText(MainActivity2.this, String.format(Locale.US, "'%d' words sent for backup.",
-                repository.getLength()), LENGTH_SHORT).show());
+        runOnUiThread(() -> Toast.makeText(MainActivity2.this,
+                String.format(Locale.US, "'%d' words sent for backup.", repository.getLength()), LENGTH_SHORT).show());
       } else {
-        runOnUiThread(() -> Toast.makeText(MainActivity2.this, "Error occurred while backing up words.",
-                LENGTH_SHORT).show());
+        runOnUiThread(() -> Toast.makeText(MainActivity2.this, "Error occurred while backing up words.", LENGTH_SHORT)
+                .show());
       }
     } catch (Exception e) {
       throw new RuntimeException(e);
@@ -218,7 +225,6 @@ public class MainActivity2 extends AppCompatActivity {
     Predicate<MessageResult[]> allSuccessAndNoErrors =
             mr -> Arrays.stream(mr).map(MessageResult::getStatus).allMatch(SUCCESS::equals) &&
                     Arrays.stream(mr).map(MessageResult::getErrors).allMatch(ObjectUtils::isEmpty);
-    return ofNullable(response).map(SendEmailsResponse::getMessages).filter(allSuccessAndNoErrors)
-            .isPresent();
+    return ofNullable(response).map(SendEmailsResponse::getMessages).filter(allSuccessAndNoErrors).isPresent();
   }
 }
